
- Modifying an empty deque during iteration now raises RuntimeError
  instead of StopIteration.

- Bug #1552726: fix polling at the interpreter prompt when certain
  versions of the readline library are in use.

- Bug #1633621: if curses.resizeterm() or curses.resize_term() is called,
  update _curses.LINES, _curses.COLS, curses.LINES and curses.COLS.

Library
-------

- Fix bug #1646630: ctypes.string_at(buf, 0) and ctypes.wstring_at(buf, 0)
  returned string up to the first NUL character.

- Bug #1637850:  make_table in difflib did not work with unicode

- Bugs #1676321:  the empty() function in sched.py returned the wrong result

- unittest now verifies more of its assumptions. In particular, TestCase
  and TestSuite subclasses (not instances) are no longer accepted in
  TestSuite.addTest(). This should cause no incompatibility since it
  never made sense with ordinary subclasses -- the failure just occurred
  later, with a more cumbersome exception.

- Patch #1001604: glob.glob() now returns unicode filenames if it was
  given a unicode argument and os.listdir() returns unicode filenames.

- Patch #685268: Consider a package's __path__ in imputil.

- Patch 1463026: Support default namespace in XMLGenerator.

- Patch 1571379: Make trace's --ignore-dir facility work in the face of
  relative directory names.

- Bug #1600860: Search for shared python library in LIBDIR, not lib/python/config,
  on "linux" and "gnu" systems.

- Bug #1124861: Automatically create pipes if GetStdHandle fails in
  subprocess. 

- Patch #783050: the pty.fork() function now closes the slave fd
  correctly.

- Patch #1638243: the compiler package is now able to correctly compile
  a with statement; previously, executing code containing a with statement
  compiled by the compiler package crashed the interpreter.

- Bug #1643943: Fix %U handling for time.strptime.

- Patch #1643874: memory leak in ctypes fixed.

- Bug #1598181: Avoid O(N**2) bottleneck in subprocess communicate(). 
